<resources>
    <string name="app_name">야먹자</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="f1">MAIN</string>
    <string name="f2">RECIPE</string>
    <string name="f3">SEARCH</string>
    <string name="f4">MYPAGE</string>
<<<<<<< HEAD
    <string name="f5"> BASKET </string>
=======
    <string name="f5">MAIN</string>


>>>>>>> 212e52af91b70010868323e531968ef2e84a9340
</resources>
