<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <FrameLayout
        android:id="@+id/frame_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <!--프래그먼트 들어올 자리-->

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:gravity="center_horizontal"
            android:orientation="horizontal">

            <Button
                android:id="@+id/bt_frag1"
                android:layout_width="wrap_content"
                android:layout_height="68dp"
                android:background="#ff656c"
                android:text="@string/f5"
                android:textColor="@color/textColor" />

            <Button
                android:id="@+id/bt_frag2"
                android:layout_width="100dp"
                android:layout_height="68dp"
                android:background="#ff656c"
                android:text="@string/f2"
                android:textColor="@color/textColor"/>

            <Button
                android:id="@+id/bt_frag3"
                android:layout_width="100dp"
                android:layout_height="68dp"
                android:background="#ff656c"
                android:text="@string/f3"
                android:textColor="@color/textColor"/>

            <Button
                android:id="@+id/bt_frag4"
                android:layout_width="100dp"
                android:layout_height="68dp"
                android:background="#ff656c"
                android:text="@string/f4"
                android:textColor="@color/textColor"/>

            <Button
                android:id="@+id/bt_frag5"
                android:layout_width="100dp"
                android:layout_height="68dp"
                android:background="#ff656c"
                android:text="@string/f1"
                android:textColor="@color/textColor"/>

        </LinearLayout>
    </FrameLayout>
</LinearLayout>
